--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
     "lucide-react": "^0.507.0",
     "next": "^14.2.28",
@@ -16,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-pageflip": "^2.0.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-clip-path": "^1.0.0",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
